----------------------------------------------------------------------
 OmegaT 3.0.8 update 2
----------------------------------------------------------------------
   1 Enhancement
   1 Bug fix
   1 Localisation update
----------------------------------------------------------------------
3.0.8 update 2 vs. 3.0.8 update 1

  Implemented requests:

  - XLIFF filter: Ignore type and ctype attributes when building <ph> tag shortcuts 
  https://sourceforge.net/p/omegat/feature-requests/938/

  Bug fixes:

  - In the Search window, the shortcut Alt+f was allocated both to Files 
and Filter, and no shortcut was allocated to Translated. The new shortcuts
are Alt+l for Files, Alt+f for Filter and Alt+t for Translated

  Localisation updates:

  - Simplified Chinese localisation updated to 3.0.8 (UI, Documentation)

----------------------------------------------------------------------
 OmegaT 3.0.8 update 1
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   11 Localisation updates
----------------------------------------------------------------------
3.0.8 update 1 vs. 3.0.8

  Bug fixes:

  - Enabling Remove Tags results in almost empty translated Word files 
  https://sourceforge.net/p/omegat/bugs/635/

  Localisation updates:

  - Italian localisation updated to 3.0.8 (UI, Documentation)
  - Hungarian localisation updated to 3.0.8 (Instant Start)
  - Czech localisation updated to 3.0.2 (UI, Documentation)
  - German localisation updated to 3.0 (UI)
  - Russian localisation updated to 3.0.3 (UI, Documentation)
  - Greek localisation updated to 3.0 (Documentation)
  - Belarus localisation updated to 3.0 (UI, Instant Start, Readme)
  - Korean localisation added at 3.0.7 (UI, Instant Start, Readme)
  - Dutch localisation updated to 3.0.8 (UI, Documentation)
  - Simplified Chinese localisation updated to 3.0.8 (UI)
  - Japanese localisation updated to 3.0.8 (UI, Documentation)
