@@ -349,6 +349,9 @@
       <application>OmegaT</application>.app</emphasis> or click on its
       location in the Dock.</para>
 
+      <para>You can modify OmegaT's behaviour by editing the <emphasis>Properties</emphasis> as well as the
+      <emphasis>VMOptions</emphasis> part of the package <application><emphasis>Info.plist</emphasis></application> file.</para>
+      
       <para>To access
       <application><emphasis>Info.plist</emphasis></application>, right-click
       on <emphasis><application>OmegaT</application>.app</emphasis> and select
@@ -356,18 +359,15 @@
       selecting your text editor of choice. You can also "cd" there directly
       from the command line and open
       <application><emphasis>Info.plist</emphasis> in a command line editor
-      like emacs or vi</application>.<emphasis> <indexterm class="singular">
+      like emacs or vi</application>.<indexterm class="singular">
           <primary>Customizing OmegaT</primary>
 
           <secondary>OS X</secondary>
 
           <tertiary>Launch parameters</tertiary>
-        </indexterm></emphasis></para>
+        </indexterm></para>
 
-      <para>You can modify the <emphasis>Properties</emphasis> as well as the
-      <emphasis>VMOptions</emphasis> part.</para>
-
-      <para>If you wish to add values to<emphasis> VMOptions</emphasis>, put a
+      <para>If you wish to add values to <emphasis>VMOptions</emphasis>, put a
       space between them. For example, <filename>-Xmx1024M
       -Duser.language=ja</filename> will launch
       <application>OmegaT</application> with 1024MB of memory and with the
@@ -379,7 +379,7 @@
       <emphasis><application>OmegaT</application>.app/
       Contents/MacOS/</emphasis>.</para>
 
-      <para><emphasis><application> </application></emphasis>Use
+      <para>Use
       <emphasis><application>OmegaT</application>.jar</emphasis> file located
       in
       <emphasis><application>OmegaT</application>.app/Contents/Resources/Java/</emphasis>
